--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,11 +6,12 @@
 }
 
 .category {
-        padding: 1rem;
+        margin:0;
+        padding-left:1rem;
         display:flex;
         position: relative;
         align-items: center;
-        background-color: #F5A9A9;;
+        background-color: #ea5a5a;
         z-index: 5;
     }
 
@@ -24,6 +25,9 @@
     .category form select{
         height:30px;
     }
+    .tags ul{
+        margin:0;
+    }
     .tags li{
         padding:5px;
         background-color: white;
@@ -32,14 +36,15 @@
         margin-left:5px;
     }
 
+
+
     .cardContainer{
         position: relative;
         display:flex;
         align-items: center;
-        background-color: #F5A9A9;
+        background-color: #ea5a5a;
         overflow:hidden;
         padding: 1rem;
-        padding-bottom:1.5rem;
         z-index: 5;
     }
     .cards{
@@ -66,12 +71,36 @@
     .card{
         display: inline-block;
         list-style: none;
-        padding-left: 0;
         margin-right:2px;
-        border: 1px solid gray;
+        border-radius: 5px;
         width:150px;
         height: 200px;
         background-color:white;
+        white-space: normal;
+        word-break:break-all;
+        padding:1rem;
+    }
+
+    .card .card-tag::before, .tags li::before{
+        content: "# ";
+        font-size: 0.8rem;
+    }
+
+    .card-title{
+
+        font-size:1.2rem;
+        font-weight:bold;
+
+    }
+
+    .card-category{
+        font-size:1rem;
+        color:gray;
+    }
+
+    .card-tag{
+        font-size:0.8rem;
+        color:#ea5a5a;
     }
 
     .map{
@@ -83,15 +112,25 @@
     }
 
     .scrollBt-right{
-        position:absolute;
         right:0;
-        z-index:4;
     }
 
     .scrollBt-left{
-        position:absolute;
         left:0;
+
+    }
+
+    .scrollBt-left, .scrollBt-right{
+        display:none;
+        position:absolute;
+        padding:10px;
         z-index:4;
+        font-size:2rem;
+        color:rgba(0,0,0,0.5);
+    }
+
+    .cardContainer:hover .scrollBt-right, .cardContainer:hover .scrollBt-left{
+        display : block;
     }
 
     .hideToggle{
@@ -99,4 +138,5 @@
         width:100%;
         text-align:center;
         bottom:0;
+        color:#fff;
     }
