--- a/static/css/meetadmin.css
+++ b/static/css/meetadmin.css
@@ -271,3 +271,41 @@
         padding: 15px;
         vertical-align:middle;
     }
+
+    .btn-accept {
+  border: 0;
+  width: 40px;
+  height: 40px;
+  outline: none;
+  font-size: 15px;
+  background: #198754;
+  color: white;
+  margin: 10px;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.btn-accept:hover {
+  color: white;
+  background: #006400;
+}
+
+.btn-reject {
+  border: 0;
+  outline: none;
+  width: 40px;
+  height: 40px;
+  font-size: 15px;
+  background: #dc3545;
+  color: white;
+  margin: 5px;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.btn-reject:hover {
+  color: white;
+  background: #8b0000;
+}
