--- a/templates/meetadmin.html
+++ b/templates/meetadmin.html
@@ -16,7 +16,7 @@
     {%endwith%}
    <div class="main container">
     <header class="container">
-           <a class="logo" href="/"> 모닥불 </a>
+           <a class="logo" href="/"><img src="{{ url_for('static', filename='logo.png') }}" alt=""></a>
            <nav class="navbar">
                {% if not session['userid'] %}
                     <button style=margin-right:20px;"><a href="/login">로그인</a></button>
@@ -27,10 +27,6 @@
                     {{session['username']}}님 반갑습니다.
                     <button style="margin-left:20px;margin-right:20px;"><a href="/logout">로그아웃</a></button>
                {% endif %}
-           <div class="search"><form action="#" method="post">
-               <input type="text" name="keyword" placeholder="검색">
-               <input type="submit" value="src">
-           </form></div>
            <button class="mypage"><a href="/mypage">mypage</a></button>
            </nav>
         </header>
@@ -53,7 +49,7 @@
                         {% for i in waiting %}
                        <div class="subProfile">
                         <div class="profilePic">
-                            <img src="../{{i.user_profile}}" alt="">
+                            <img src="../{{i.user_profile}}" alt="" style="width:200px; height:200px;">
                         </div>
                         <div class="subName">{{i.user_name}}</div>
                         <form method="post">
@@ -77,7 +73,7 @@
                       {% for i in members %}
                        <div class="subProfile">
                         <div class="profilePic">
-                            <img src="../static/profile/{{i.profile}}" alt="">
+                            <img src="../static/profile/{{i.profile}}" alt="" style="width:200px; height:200px;">
                         </div>
                         <div class="subName">{{i.username}}</div>
                         <form method="post" action="/quit">
