--- a/templates/meetpage.html
+++ b/templates/meetpage.html
@@ -11,49 +11,7 @@
     <title>모닥불 : meetpage</title>
 </head>
 <style>
-   html, body{
-        margin: 0;
-        border: 0;
-        width : 100%;
-        height: 100%;
-    }
-
-    .main{
-        margin: 0;
-        border: 0;
-        width : 100%;
-        height: 100%;
-        display:flex;
-        flex-direction: column;
-        position: absolute;
-    }
-
-    header{
-        top:0px;
-        padding: 1rem 2rem;
-        z-index:10;
-        display:flex;
-        position: relative;
-        justify-content: space-between;
-        align-items: center;
-        background-color: #F5A9A9;
-        border-bottom: 1px solid lightgray;
-    }
-
-    .navbar{
-        display: flex;
-        position: relative;
-    }
-
-    .search input{
-        height:30px;
-        margin-right:1rem;
-    }
-
-    .contents{
-        flex: auto;
-        background-color:aliceblue;
-        display:flex;
+   .contents{
         align-items: center;
         text-align: center;
     }
@@ -78,7 +36,9 @@
         align-items: center;
     }
     .meetPic{
-        display: inline-block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width:50px;
         height: 50px;
         background-color:gray;
@@ -86,11 +46,9 @@
         border-radius: 50%;
         overflow: hidden;
     }
-    img {
-        width:50px;
-        height: 50px;
-        margin-right: 10px;
-        border-radius: 50%;
+
+    .meetPic img{
+    width:100%;
     }
 
     .meetTitleNav h1{
@@ -118,33 +76,94 @@
         width: 100%;
         height: 100%;
         background-color: bisque;
+        background-image:url("../board.jpg");
+        background-size:cover;
         flex-wrap: nowrap;
         overflow: hidden;
     }
 
-    .meetBoard #calendar{
+    .meetBoard #board button{
+        position:absolute;
+        bottom:0;
+        left:0;
+        padding:10px;
+        border:0;
+        background-color:rgba(0,0,0,0.3);
+        color:#fff;
+        border-radius:50%;
+        margin:10px;
+        cursor:pointer;
+    }
+
+    .meetBoard #board button:hover{
+        background-color:rgba(0,0,0,0.5);
+    }
+
+    .draggable{
+        position: absolute;
+        background-color:#ffe294;
+        padding:10px;
+        white-space:normal;
+        word-break:break-all;
+        min-width: 100px;
+        min-height:100px;
+        filter:drop-shadow(1px 3px 3px rgba(0,0,0,0.3));
+    }
+
+    .draggable textarea{
+        border: 0;
+        resize:none;
+        width:100%;
+        height:100px;
+        padding: 0;
+        margin: 0;
+        background-color: transparent;
+        overflow:inherit;
+    }
+
+    .draggable textarea:focus{
+        outline:none;
+    }
+
+    .meetBoard .members{
+        position:absolute;
+        top:0;
+        left:0;
+        background-color:#fff;
+        width:100%;
+        z-index:2;
+    }
+    .meetBoard #calender{
         width: 100%;
         height: 100%;
         filter: drop-shadow(0 2px 5px lightgray);
         background-color: white;
     }
 
-    .meetBoard #toggleBt{
-        background-color: aquamarine;
-        display:inline-block;
-        position: absolute;
-        bottom:0;
-        right: 80px;
-        margin: 10px;
-    }
-
-    .meetBoard #membersBt{
-        background-color: skyblue;
+    .meetBoard .toggleButtons{
         display:inline-block;
         position: absolute;
         bottom:0;
         right: 0;
         margin: 10px;
+        z-index:10;
+    }
+
+    #toggleBt i, #membersBt i{
+        font-size:1.5rem;
+        color:rgba(0,0,0,0.5);
+
+    }
+
+    #toggleBt i:hover, #membersBt i:hover{
+        color:rgba(0,0,0,0.8);
+
+    }
+
+    .meetBoard #membersBt, .meetBoard #toggleBt{
+        display:inline-block;
+        margin-right:10px;
+        margin-bottom:3px;
     }
 
     .profileList{
@@ -163,8 +182,12 @@
         width:70px;
         height:70px;
         border-radius: 50%;
+        overflow: hidden;
     }
 
+.profilePic img{
+    width:100%;
+}
     .subProfile .subName{
         margin-top: 0.2rem;
         font-size: 0.8rem;
@@ -203,12 +226,19 @@
         background-color: gainsboro;
     }
 
+    .meetNotice > span {
+        display: block;
+        text-align: right;
+        padding-right: 30px;
+        padding-top: 10px;
+    }
+
     .meetNotice .notice{
         height: 100%;
         flex:1;
-        overflow: scroll;
+        overflow-y: scroll;
         text-overflow: ellipsis;
-        white-space: nowrap;
+        white-space: normal;
         line-height: 2;
     }
 
@@ -216,6 +246,7 @@
         text-align: justify;
         list-style:square;
         padding-left: 0;
+        padding-right:10px;
     }
 
         @media(max-width:1000px){
@@ -233,57 +264,29 @@
             font-size: 1rem;
         }
 
-       @media(max-height:800px){
-        .meetNotice{
-            display:none;
-        }
-      }
+        .meetNotice > span {
+        padding-top: 0;
+    }
+    .meetNotice .notice ul{
+        margin-top:0;
+    }
     }
 
-    #chatBt{
-        display: flex;
-        position: fixed;
-        right: 0;
-        bottom: 0;
-        margin:50px;
-        width:70px;
-        height:70px;
-        background-color: cadetblue;
-        border-radius: 50%;
-        text-align: center;
-        justify-content: center;
-        align-items: center;
+    .meetOption{
+        padding:10px;
+        background-color:#ff9898;
+        border-radius:50px;
+        color:#fff;
     }
 
-    #chatBox{
-        display: flex;
-        position: fixed;
-        right: 0;
-        bottom: 0;
-        margin:50px;
-        width:400px;
-        height:600px;
-        background-color: cadetblue;
-        border-radius: 10px;
-        text-align: center;
-        justify-content: center;
-        align-items: center;
+    .meetOption:link, .meetOption:visited{
+        color:#fff;
     }
-
-    #chatCloseBt{
-        display: inline-block;
-        position: absolute;
-        right: 0;
-        top:0;
-        padding: 15px;
-        vertical-align:middle;
-    }
-}
 </style>
 <body>
 <div class="main container">
        <header class="container">
-           <a class="logo" href="/"> 모닥불 </a>
+           <a class="logo" href="/"><img src="{{ url_for('static', filename='logo.png') }}" alt=""></a>
            <nav class="navbar">
                {% if not session['userid'] %}
                     <button style=margin-right:20px;"><a href="/login">로그인</a></button>
@@ -294,10 +297,6 @@
                     {{session['username']}}님 반갑습니다.
                     <button style="margin-left:20px;margin-right:20px;"><a href="/logout">로그아웃</a></button>
                {% endif %}
-           <div class="search"><form action="#" method="post">
-               <input type="text" name="keyword" placeholder="검색">
-               <input type="submit" value="src">
-           </form></div>
            <button class="mypage"><a href="/mypage">mypage</a></button>
            </nav>
         </header>
